reformatted resume and p

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -105,6 +105,8 @@ layout: default
                   {% include resume/projects.liquid %}
                 {% when 'awards' %}
                   {% include resume/work.liquid %}
+                {% when 'professional research service' %}
+                  {% include resume/work.liquid %}
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'representative first-author publications' %}
