--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -1,42 +1,18 @@
 ---
 layout: default
 ---
-{% if page._styles or page.role or page.organization or page.start or page.location or page.collaborators %}
+{% if page._styles %}
   <style type="text/css">
-        {{ page._styles }}
-
-        /* Added styles for project metadata */
-        .project-meta {
-          color: var(--global-grey);
-    font-size: 0.9rem;
-          margin-top: 1rem;
-          margin-bottom: 1rem; /* Added spacing for TOC */
-        }
-        .project-meta p {
-          margin-bottom: 0.25rem;
-          display: flex;
-    align-items: center;
-        }
-        .project-meta i {
-          width: 1.5em;
-    /* Give icons consistent spacing */
-          text-align: center;
-          margin-right: 0.25em;
-    }
+    {{ page._styles }}
   </style>
 {% endif %}
 
 <div class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-
-    <p class="post-description">{{ page.description }}</p>
-
-    {%- comment -%}
-      Project meta block removed.
-      It is now in _layouts/default.liquid to be part of the sidebar.
-    {%- endcomment -%}
-  </header>
+  {%- comment -%}
+    The <header class="post-header">...
+    was moved to _layouts/default.liquid
+    to fix the mobile layout stacking order.
+  {%- endcomment -%}
 
   <article>{{ content }}</article>
 
