--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -149,40 +149,39 @@
     </div>
 
     <!-- Journal/Book title and date -->
-    {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
-    {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
-    {% if entry.type == 'article' %}
-      {% capture entrytype %}<em>{{ entry.journal }}</em>{% endcapture %}
-    {% elsif proceedings contains entry.type %}
-      {% capture entrytype %}<em>In {{ entry.booktitle }}</em>{% endcapture %}
-    {% elsif thesis contains entry.type %}
-      {% capture entrytype %}<em>{{ entry.school }}</em>{% endcapture %}
-    {% else %}
-      {% capture entrytype %}{% endcapture %}
-    {% endif %}
-    {% if entry.month %}
-      {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
-    {% endif %}
-    {% if entry.year %}
-      {% capture entryyear %}{{ " " }}{{ entry.year }}{% endcapture %}
-    {% endif %}
-    {% if entry.location %}
-      {% capture entrytype %}{{ entrytype }}{{ ", " }}{{ entry.location }}{% endcapture %}
-    {% endif -%}
-    {% if entry.additional_info %}
-      {% capture entrytype %}{{ entrytype }}{{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}{% endcapture %}
-    {% endif %}
-    {% capture hook_exists %}{% file_exists _includes/hook/bib.liquid %}{% endcapture %}
-    {% if hook_exists == 'true' %}
-      {% include hook/bib.liquid %}
-    {% endif %}
-    {% assign entrytype_text = entrytype | strip_html | strip %}
-    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %}, {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
     <div class="periodical">
-      {{ periodical | strip }}
-    </div>
-    <div class="periodical">
-      {{ entry.note | strip }}
+      {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
+      {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
+
+      {% comment %} --- Main Venue --- {% endcomment %}
+      {% if entry.type == 'article' %}
+        {% if entry.journal %}
+          <em style="display: block; margin-bottom: 0.25rem;">{{ entry.journal | strip }}</em>
+        {% endif %}
+      {% elsif proceedings contains entry.type %}
+        {% if entry.booktitle %}
+          <em style="display: block; margin-bottom: 0.25rem;">In {{ entry.booktitle | strip }}</em>
+        {% endif %}
+      {% elsif thesis contains entry.type %}
+        {% if entry.school %}
+          <em style="display: block; margin-bottom: 0.25rem;">{{ entry.school | strip }}</em>
+        {% endif %}
+      {% endif %}
+
+      {% comment %} --- Multi-Venue List (our new code) --- {% endcomment %}
+      {% if entry.also_in %}
+        {% assign venues_list = entry.also_in | split: ';' %}
+        <ul class="venues-list" style="list-style-type: none; padding-left: 0; margin-bottom: 0.25rem; font-style: italic;">
+          {% for v in venues_list %}
+            <li style="margin-bottom: 0.25rem;">Also in: {{ v | strip }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+
+      {% comment %} --- Year --- {% endcomment %}
+      {% if entry.year %}
+        <em>({{ entry.year }})</em>
+      {% endif %}
     </div>
 
     <!-- Links/Buttons -->
