--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -2,7 +2,6 @@
 layout: default
 ---
 {% if page._styles %}
-  <!-- Page/Post style -->
   <style type="text/css">
     {{ page._styles }}
   </style>
@@ -11,9 +10,10 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-description">{{ page.description }}</p>
+    <p class="post-description mb-3">{{ page.description }}</p>
+
     {% if page.role or page.organization or page.start or page.end or page.location or page.collaborators %}
-      <div class="small text-muted mb-3">
+      <div class="small text-muted">
         {% if page.role %}
           <p class="d-flex align-items-center mb-1"><i class="fas fa-user-tie fa-fw me-2"></i>{{ page.role }}</p>
         {% endif %}
@@ -34,7 +34,7 @@ layout: default
           <p class="d-flex align-items-center mb-1"><i class="fas fa-map-marker-alt fa-fw me-2"></i>{{ page.location }}</p>
         {% endif %}
         {% if page.collaborators %}
-          <p class="d-flex align-items-center mb-1"><i class="fas fa-users fa-fw me-2"></i> Brennen Hill, {{ page.collaborators }}</p>
+          <p class="d-flex align-items-center mb-0"><i class="fas fa-users fa-fw me-2"></i> Brennen Hill, {{ page.collaborators }}</p>
         {% endif %}
       </div>
     {% endif %}
