--- a/_includes/resume/publications.liquid
+++ b/_includes/resume/publications.liquid
@@ -1,5 +1,6 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign publications = data[1] | sort: 'releaseDate' | reverse %}
+  {% comment %} {% assign publications = data[1] | sort: 'releaseDate' | reverse %} {% endcomment %}
+  {% assign publications = data[1] %}
   {% for content in publications %}
     <li class="list-group-item">
       <div class="row">
