--- a/_includes/resume/publications.liquid
+++ b/_includes/resume/publications.liquid
@@ -1,6 +1,5 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% comment %} {% assign publications = data[1] | sort: 'releaseDate' | reverse %} {% endcomment %}
-  {% assign publications = data[1] %}
+  {% assign publications = data[1] | sort: 'order' %}
   {% for content in publications %}
     <li class="list-group-item">
       <div class="row">
@@ -18,7 +17,7 @@
         </div>
         <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
           <h6 class="title font-weight-bold ml-1 ml-md-4">
-            <a href="{{ content.url }}">{{ content.name }}</a>
+            <a href="{{ content.url }}">[{{ content.order }}] {{ content.name }}</a>
           </h6>
           {% if content.authors %}
             <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">
