--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -189,13 +189,13 @@
       {% if entry.bibtex_show %}
         <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
       {% endif %}
-      {% if entry.html %}
+      {% comment %} {% if entry.html %}
         {% if entry.html contains '://' %}
           <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
         {% else %}
           <a href="{{ entry.html | prepend: '/assets/html/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
         {% endif %}
-      {% endif %}
+      {% endif %} {% endcomment %}
       
       {% if entry.pdf %}
         {% if entry.pdf contains '://' %}
@@ -355,7 +355,7 @@
 
     {% if entry.video and site.enable_video_embedding %}
       <div class="video hidden">
-        <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1" controls=true %}</div>
+        <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1 w-100" controls=true %}</div>
       </div>
     {% endif %}
 
