--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -354,13 +354,26 @@
     {% endif %}
 
     {% if entry.video and site.enable_video_embedding %}
+      <style>
+          .video-cover {
+              object-fit: cover;
+          }
+      </style>
+      <div class="video hidden">
+        <div class="embed-responsive embed-responsive-16by9 rounded z-depth-1">
+           {% include video.liquid path=entry.video class="embed-responsive-item video-cover" controls=true %}
+        </div>
+      </div>
+    {% endif %}
+
+    {% comment %} {% if entry.video and site.enable_video_embedding %}
       <div class="video hidden">
         <div class="embed-responsive embed-responsive-16by9 rounded z-depth-1">
           {% include video.liquid path=entry.video class="embed-responsive-item" controls=true %}
         </div>
         {% comment %} <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1 w-100" controls=true %}</div> {% endcomment %}
       </div>
-    {% endif %}
+    {% endif %} {% endcomment %}
 
     {% if entry.pdf %}
       <div class="pdf hidden">
