--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -377,8 +377,8 @@
     {% if entry.pdf %}
       <div class="pdf hidden">
         <div style="text-align: center;">
-          <object data="{{ pdf_url }}" type="application/pdf" width="100%" height="900px">
-            <p>Unable to display PDF file. <a href="{{ pdf_url }}">Download</a> instead.</p>
+          <object data="{{ pdf_url }}" type="application/pdf" width="100%" height="00px">
+            <p>Unable to display PDF file or mobile device in use. <a href="{{ pdf_url }}">Download</a> instead.</p>
           </object>
         </div>
       </div>
